# server/item.router.js
@@ -4,7 +4,7 @@ const mongoose = require("mongoose");
 const Item = require("./item.model.js");
 
 //itemi delete
-router.delete("/items/:itemId", (req, res) =>{
+router.delete("/:itemId", (req, res) =>{
     Item.deleteOne({"_id": mongoose.Types.ObjectId(req.params.itemId)}, (err)=>{
         if(err) return res.send(500);
         console.log("save success");
@@ -35,7 +35,7 @@ router.delete("/items/:itemId", (req, res) =>{
 }); 
  */
 // return an item
-router.get("/items/:itemId", (req, res)=>{
+router.get("/:itemId", (req, res)=>{
     Item.findById(req.params.itemId, function (err,item){
         if(err){
             console.log("error: ", err);
@@ -46,7 +46,7 @@ router.get("/items/:itemId", (req, res)=>{
 });
 
 // returns all items
-router.get("/items", (req, res)=>{
+router.get("/", (req, res)=>{
     Item.find({}, function(err, item) {
         if(err){
             console.log("Error", err);
