# swagger/default.yaml
@@ -3,8 +3,82 @@ info:
   title: TLU
   description: ""
   version: "1.0.0"
+servers:
+  - url: localhost:3000/api/v1
+security:
+  - bearerAuth: []
 paths:
-  /api/v1/login:
+
+  /items/{itemId}:
+    get:
+      operationId: getItem
+      summary: Returns an item object
+      parameters:
+        - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        500:
+          description: Error
+
+  /users/{userId}:
+    get:
+      operationId: getUser
+      summary: Returns a user object
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/userIdParam"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        403:
+          description: Forbidden
+        500:
+          description: Error
+
+  /users/{userId}/cart/{itemId}:
+    put:
+      operationId: addItemToCart
+      summary: Adds an item to cart
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/userIdParam"
+        - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+        403:
+          description: Forbidden
+        500:
+          description: err
+    delete:
+      operationId: removeItemFromCart
+      summary: Removes an item from cart
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/userIdParam"
+        - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+        403:
+          description: Forbidden
+        500:
+          description: err
+
+
+  /login:
     post:
       operationId: login
       summary: User signs in
@@ -23,7 +97,7 @@ paths:
       responses:
         200:
           description: OK.
-          content;
+          content:
             application/json:
               schema:
                 type: object
@@ -31,22 +105,22 @@ paths:
                   token:
                     type: string
                   user:
-                    type:object
+                    type: object
                     properties:
                       email:
-                        type:string
+                        type: string
                       createdAt:
-                        type: string 
+                        type: string
                       _id:
-                        type: string   
+                        type: string
         422:
           description: bad email or password
         401:
           description: unauthorized
-  /api/v1/signup:
+  /signup:
     post:
       operationId: signup
-      summary: User signs up
+      summary: User creates an account
       description: ""
       requestBody:
         required: true
@@ -65,4 +139,49 @@ paths:
         422:
           description: bad email or password
         401:
-          description: unauthorized          
+          description: unauthorized
+          
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  schemas:
+    Item:
+      type: object
+      properties:
+        _id:
+          type: string
+        createdAt:
+          type: string
+        price:
+          type: string
+        title:
+          type: string
+    User:
+      type: object
+      properties:
+        _id:
+          type: string
+        createdAt:
+          type: string
+        cart:
+          type: array
+          items:
+            type: string
+        email:
+          type: string
+  parameters:
+    userIdParam:
+      in: path
+      name: userId
+      schema:
+        type: string
+      required: true
+    itemIdParam:
+      in: path
+      name: itemId
+      schema:
+        type: string
+      required: true
